--- a/Doan_TTTN_WebBanRuou/views/site/checkout.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/checkout.ejs
@@ -468,6 +468,7 @@
                   <select id="district" name="district">
                     </select>
                     <br>
+                    <br>
                     <input class="btn-checkout" type="submit" value="Đặt hàng">
                   </div>`;
     } else if (document.getElementById("info-1").checked) {
@@ -544,8 +545,10 @@
                       />
                     </div>
                     <p>Chọn quận (Thành Phố Hồ Chí Minh)</p>
+                    <p style="color:red">Vui lòng chọn đúng quận của bạn để tiện cho việc giao hàng (*)</p>
                   <select id="district" name="district">
                     </select>
+                    <br>
                     <br>
                     <input class="btn-checkout" type="submit" value="Đặt hàng">
                   </div>`;
