--- a/Doan_TTTN_WebBanRuou/views/site/trang-chu.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/trang-chu.ejs
@@ -101,11 +101,7 @@
     <div class="header">
       <div class="container">
         <div class="logo">
-          <a href=""
-            ><img
-              src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/logo_liquor.png.webp"
-              alt=""
-          /></a>
+          <a href=""><img src="/img/logoReport.PNG" alt="" /></a>
         </div>
 
         <div class="center-bar">
@@ -174,11 +170,7 @@
       <div class="types">
         <div class="container">
           <div class="Liquor">
-            <a href=""
-              ><img
-                src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/brian-jones.jpg.webp"
-                alt=""
-            /></a>
+            <a href=""><img src="/img/wine-content1.jpg" alt="" /></a>
             <div class="content">
               <h1>Liquor</h1>
               <span class="amounts">11 items</span>
@@ -186,11 +178,7 @@
           </div>
 
           <div class="Wine">
-            <a href=""
-              ><img
-                src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/joseph-costa.jpg.webp"
-                alt=""
-            /></a>
+            <a href=""><img src="/img/wine-content3.jpg" alt="" /></a>
             <div class="content">
               <h1>Wine</h1>
               <span class="amounts">11 items</span>
@@ -198,11 +186,7 @@
           </div>
 
           <div class="Beer">
-            <a href=""
-              ><img
-                src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/ratheesh-chandran.jpg.webp"
-                alt=""
-            /></a>
+            <a href=""><img src="/img/wine-content2.jpg" alt="" /></a>
             <div class="content">
               <h1>Beer</h1>
               <span class="amounts">11 items</span>
@@ -210,11 +194,7 @@
           </div>
 
           <div class="Accessories">
-            <a href=""
-              ><img
-                src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/two-elegant.jpg.webp"
-                alt=""
-            /></a>
+            <a href=""><img src="/img/wine-content4.jpg" alt="" /></a>
             <div class="content">
               <h1>Accessories</h1>
               <span class="amounts">11 items</span>
