--- a/Doan_TTTN_WebBanRuou/views/site/product-detail.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/product-detail.ejs
@@ -79,7 +79,7 @@
               <a href="/san-pham" class="nav-item nav-link">Sản Phẩm</a>
               <!-- <a href="product-detail.html" class="nav-item nav-link">Product Detail</a> -->
               <a href="/gio-hang" class="nav-item nav-link">Giỏ Hàng</a>
-              <a href="/thanh-toan" class="nav-item nav-link">Thanh Toán</a>
+
               <a href="/users/tai-khoan" class="nav-item nav-link"
                 >Tài khoản của bạn</a
               >
@@ -98,10 +98,7 @@
           <div class="col-md-3">
             <div class="logo">
               <a href="/">
-                <img
-                  src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/logo_liquor.png.webp"
-                  alt="Logo"
-                />
+                <img src="/img/logoReport.PNG" alt="Logo" />
               </a>
             </div>
           </div>
