--- a/Doan_TTTN_WebBanRuou/views/site/san-pham-theo-loai.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/san-pham-theo-loai.ejs
@@ -70,7 +70,7 @@
 
               <!-- <a href="product-detail.html" class="nav-item nav-link">Product Detail</a> -->
               <a href="/gio-hang" class="nav-item nav-link">Giỏ Hàng</a>
-              <a href="/thanh-toan" class="nav-item nav-link">Thanh Toán</a>
+
               <a href="/users/tai-khoan" class="nav-item nav-link"
                 >Tài khoản của bạn</a
               >
@@ -150,6 +150,20 @@
                         <button><i class="fa fa-search"></i></button>
                       </div>
                     </div>
+
+                    <!-- <div class="col-md-4">
+                      <div class="product-price-range">
+                        <div class="dropdown" style="display: flex">
+                          <p>Mức giá</p>
+                          <select>
+                            <option>0$ - 20$</option>
+                            <option>20$ - 50$</option>
+                            <option>50$ - 100$</option>
+                            <option>Trên 100$</option>
+                          </select>
+                        </div>
+                      </div>
+                    </div> -->
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
                       <div class="product-price-range"></div>
