--- a/Doan_TTTN_WebBanRuou/views/site/BillPayment.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/BillPayment.ejs
@@ -30,10 +30,7 @@
           <div class="card">
             <div class="text-left logo p-2 px-5">
               <div class="logo-image">
-                <img
-                  src="https://hn.arrowpress.net/lusion/wp-content/uploads/2020/11/logo_liquor.png.webp"
-                  width="100"
-                />
+                <img src="/img/logoReport.PNG" width="100" />
               </div>
             </div>
             <div class="invoice p-5">
