--- a/Doan_TTTN_WebBanRuou/views/site/delivery-map.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/delivery-map.ejs
@@ -38,7 +38,7 @@
     </style>
   </head>
   <body>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=	AIzaSyDWTx7bREpM5B6JKdbzOvMW-RRlhkukmVE&callback=initMap"
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNI_ZWPqvdS6r6gPVO50I4TlYkfkZdXh8&callback=initMap"
   type="text/javascript"></script>
   <h1 style="margin-left:600px">Google Map</h1>
     <div id="panel">    
@@ -48,7 +48,7 @@
         </select>    
         <b>Đích: </b>    
         <select id="destination"> 
-          <option value="">144 Man Thiện</option> 
+          <option value="">None</option> 
         </select>   
         <b>Phương tiện: </b>   
         <select id="mode">
