--- a/Doan_TTTN_WebBanRuou/views/site/orderProducer.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/orderProducer.ejs
@@ -21,15 +21,17 @@
     />
   </head>
   <body>
-    <div class="cart-page">
-        <div class="container-fluid">
+    <div class="cart-page"
+    style="margin-left: 200px; border: 1px solid grey; max-width: 1100px">
+        <div class="container"
+        style="max-width: 1100px; margin: 0 auto; margin-left: 80px">
          <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <div class="cart-page-inner">
                     <div class="table-responsive">
                         <table class="table table-bordered">
                         <div class="container mt-3">
-                        <h2 style="padding-left:600px">Đơn đặt hàng</h2>
+                        <h2 style="padding-left:330px">Đơn đặt hàng</h2>
                         <form action="/quan-tri/exportexcel" method="post" id="myForm">
                             <label for="age">Tên nhà cung cấp</label>
 
@@ -61,9 +63,9 @@
                             class="form-control"
                             />
                             <br />
-                            <h3 style="margin-left:250px">Danh mục sản phẩm từ nhà cung cấp</h3>
+                            <h3 style="margin-left:200px">Danh mục sản phẩm từ nhà cung cấp</h3>
                             <br>
-                            <thead class="thead-dark" style="margin-left: 300px">
+                            <thead class="thead-dark" style="margin-left: 500px">
                             <tr>
                                 <th>ID</th>
                                 <th>Hình ảnh</th>
@@ -91,7 +93,7 @@
                                 </td>
                                 <td class="name" id="name"><%=product.TENDONG%></td>
                                 <td class="price" style="width:100px"><%=product.GIA%> $</td>
-                                <td><i class="fas fa-plus-circle addcart" style="font-size: 25px;" onclick="alert('Đã thêm vào danh sách')"></i></td>
+                                <td><button type="button" class="btn btn-primary"><i class="fas fa-plus-circle addcart" style="font-size: 20px;" onclick="alert('Đã thêm vào danh sách')"></i></button></td>
                                 </tr>
                             </div>
                             <% } %>
@@ -103,7 +105,7 @@
         </div>
     </div>
     </div>
-    <a href="/quan-tri/export_excel/<%=data[0].MANCC%>" class="btn btn-primary mt-2" style="margin-left: 430px"/>Tiếp tục</a><br>
+    <a href="/quan-tri/export_excel/<%=data[0].MANCC%>" class="btn btn-primary mt-2" style="margin-left: 700px"/>Tiếp tục</a><br>
         <a href="/quan-tri/crud">Quay lại?</a>
       
       </form>
