--- a/Doan_TTTN_WebBanRuou/views/site/reviewOrder.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/reviewOrder.ejs
@@ -49,13 +49,15 @@
               <div class="table">
                 <table class="table table-bordered">
                   <div class="information-Order-Detail">
-                    <a href="/quan-tri/crud">Quay lại ?</a>
+                    <div class="logo">
+                      <a href=""><img src="/img/logoReport.PNG" alt="" /></a>
+                    </div>
                     <h2 style="margin-left: 180px; padding: 50px">
                       THÔNG TIN CHI TIẾT ĐƠN HÀNG
                     </h2>
                     <h5>HỌ VÀ TÊN NGƯỜI NHẬN</h5>
                     <p><%=data[0].HONN%> <%=data[0].TENNN%></p>
-                    <h5>ĐỊA CHỈ NHẬN</h5>
+                    <h5>ĐỊA CHỈ NHẬN HÀNG</h5>
                     <p><%=data[0].DIACHINN%></p>
                     <h5>SỐ ĐIỆN THOẠI NGƯỜI NHẬN</h5>
                     <p><%=data[0].SDTNN%></p>
@@ -66,12 +68,16 @@
                     <p>Không</p>
                     <% } %>
                     <h5>NHÂN VIÊN GIAO HÀNG</h5>
-                    <p><%=data[0].HONVGH%> <%=data[0].TENNVGH%></p>
-                    <h5 style="margin-left: 400px">MÃ ĐƠN HÀNG</h5>
+                    <p>
+                      <%=data[0].HONVGH%> <%=data[0].TENNVGH%> (Mã nhân viên:
+                      <%=data[0].MANV%>)
+                    </p>
+                    <h5 style="margin-left: 390px">MÃ ĐƠN HÀNG</h5>
                     <p style="margin-left: 420px"><%=data[0].MAPD%></p>
                   </div>
                   <thead class="thead-dark">
                     <tr>
+                      <th>Mã</th>
                       <th>Hình ảnh</th>
                       <th>Tên</th>
                       <th>Giá</th>
@@ -84,6 +90,7 @@
 
                     <div class="item-cart">
                       <tr>
+                        <td class="idsp"><%=product.MD%></td>
                         <td>
                           <div class="img" style="display: flex; width: 200px">
                             <a href=""
@@ -110,13 +117,15 @@
                 <div>
                   <h4 style="margin-left: 20px">
                     Phí Ship:<%if (product.subtotal >= 200) { %>
-                    <span>Miễn phí</span>
+                    <span style="color: rgb(19, 211, 19)">Miễn phí</span>
                     <% }else{ %>
                     <span><%=product.sl*2%>$</span>
                     <% } %>
                   </h4>
                   <h4 style="margin-left: 20px; padding-bottom: 100px">
-                    Tổng Cộng:<span> <%=product.THANHTIEN%> $</span>
+                    Tổng Cộng:<span style="color: rgb(82, 82, 226)">
+                      <%=product.THANHTIEN%> $</span
+                    >
                   </h4>
                 </div>
               </div>
