--- a/Doan_TTTN_WebBanRuou/views/site/reviewOrdernot.ejs
+++ b/Doan_TTTN_WebBanRuou/views/site/reviewOrdernot.ejs
@@ -35,21 +35,29 @@
 
   <body>
     <!-- Cart Start -->
-    <div class="cart-page">
-      <div class="container-fluid">
+    <div
+      class="cart-page"
+      style="margin-left: 200px; border: 1px solid grey; max-width: 1100px"
+    >
+      <div
+        class="container"
+        style="max-width: 1100px; margin: 0 auto; margin-left: 80px"
+      >
         <div class="row">
-          <div class="col-lg-8">
+          <div class="col-lg-10">
             <div class="cart-page-inner">
               <div class="table-responsive">
                 <table class="table table-bordered">
                   <div class="information-Order-Detail">
-                    <a href="/quan-tri/crud">Quay lại ?</a>
-                    <h2 style="margin-left: 480px; padding-top: 50px">
+                    <div class="logo">
+                      <a href=""><img src="/img/logoReport.PNG" alt="" /></a>
+                    </div>
+                    <h2 style="margin-left: 180px; padding: 50px">
                       THÔNG TIN CHI TIẾT ĐƠN HÀNG
                     </h2>
                     <h5>HỌ VÀ TÊN NGƯỜI NHẬN</h5>
                     <p><%=data[0].HONN%> <%=data[0].TENNN%></p>
-                    <h5>ĐỊA CHỈ NHẬN</h5>
+                    <h5>ĐỊA CHỈ NHẬN HÀNG</h5>
                     <p><%=data[0].DIACHINN%></p>
                     <h5>SỐ ĐIỆN THOẠI NGƯỜI NHẬN</h5>
                     <p><%=data[0].SDTNN%></p>
@@ -63,7 +71,9 @@
                     <p style="margin-left: 420px"><%=data[0].MAPD%></p>
                   </div>
                   <thead class="thead-dark" style="margin-left: 300px">
+                    <h5>Sản phẩm:</h5>
                     <tr>
+                      <th>Mã</th>
                       <th>Hình ảnh</th>
                       <th>Tên</th>
                       <th>Giá</th>
@@ -76,6 +86,7 @@
 
                     <div class="item-cart">
                       <tr>
+                        <td class="idsp"><%=product.MD%></td>
                         <td>
                           <div class="img" style="display: flex; width: 200px">
                             <a href=""
@@ -102,13 +113,15 @@
                 <div>
                   <h4 style="margin-left: 20px">
                     Phí Ship:<%if (product.subtotal >= 200) { %>
-                    <span>Miễn phí</span>
+                    <span style="color: rgb(19, 211, 19)">Miễn phí</span>
                     <% }else{ %>
                     <span><%=product.sl*2%>$</span>
                     <% } %>
                   </h4>
                   <h4 style="margin-left: 20px; padding-bottom: 100px">
-                    Tổng Cộng:<span> <%=product.THANHTIEN%> $</span>
+                    Tổng Cộng:<span style="color: rgb(82, 82, 226)">
+                      <%=product.THANHTIEN%> $</span
+                    >
                   </h4>
                 </div>
               </div>
